--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,10 @@ python-multipart>=0.0.5
 # Plotting
 matplotlib>=3.6.0
 seaborn>=0.12.0
+
+# Azure Dependencies
+asyncpg>=0.28.0
+azure-storage-blob>=12.17.0
+azure-identity>=1.14.0
+opencensus-ext-azure>=1.1.0
+opencensus-ext-flask>=0.7.0
